first video added to video

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
  <body>
     <h1 align="center">Welcome Back Mahmood in Website</h1>
     <hr>
-    <h4 > Welcome Hasan mahmood. <br> 
-        <br>U CAN DO IT MAHMOOD</h4>
+    <h4 align="center"> Welcome Hasan mahmood. <br> 
+        <hr>
+        <br>
+        <h4>YouTube trending video</h4>
+        <video width="230" height="300" controls>
+            <source src="video1.mp4" type="video/mp4">
+          </video>
+ </body>
  </body>
  </html>
