update the heading

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WEB DEVELOPMENT</title>
  </head>
  <body>
-    <h1 align="center">Welcome Back Mahmood in Website</h1>
+    <h1 align="center">Welcome Back in Website</h1>
     <hr>
     <h4 align="center"> Welcome Hasan mahmood. <br> 
         <hr>
