--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>WEB DEVELOPMENT</title>
  </head>
  <body>
-    <h1 align="center">Welcome Back in Website</h1>
-    <hr>
+    <h1 align="center" >Welcome Back in Website</h1>
+    <h6 align="center">Website is Under Development</h6>
+    <hr color="green">
+    <hr color="green">
     <h4 align="center"> Welcome Hasan mahmood. <br> 
-        <hr>
+        <hr color="green">
         <br>
         <h4>YouTube trending video</h4>
         <video width="230" height="300" controls>
             <source src="video1.mp4" type="video/mp4">
           </video>
+          <hr color="green">
  </body>
  </body>
  </html>
