--- a/index.html
+++ b/index.html
@@ -4,20 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB DEVELOPMENT</title>
+    <link rel="stylesheet" href="style.css">
  </head>
  <body>
-    <h1 align="center" >Welcome Back in Website</h1>
-    <h6 align="center">Website is Under Development</h6>
-    <hr color="green">
-    <hr color="green">
-    <h4 align="center"> Welcome Hasan mahmood. <br> 
-        <hr color="green">
+    <form>
+        <input type="text" placeholder="Search" >
+        <button type="submit">Search</button>
+        <input type="radio" name="option" value="video" checked> Video
+        <input type="radio" name="option" value="movie"> Movie  
+        <input type="radio" name="option" value="tvshow"> TV Show
+        <input type="radio" name="option" value="actor"> Actor 
+        <input type="radio" name="option" value="director"> Director
         <br>
-        <h4>YouTube trending video</h4>
-        <video width="230" height="300" controls>
-            <source src="video1.mp4" type="video/mp4">
-          </video>
-          <hr color="green">
+    </form>
+    <button1>
+        <h2>NETFLY</h2>
+
+    </button1> 
+    <h1>Welcome Back in Website</h1>
+    <h6>Website is Under Development</h6>
+ 
+    <h4> Welcome Hasan mahmood.</h4> <br> 
+     
+        <hr color="white">
+                <p>YouTube Trending video</p>
+                    <div class="grid-container">
+  <div class="item"><video src="video2.mp4" width="230" height="150" controls></video></div>
+  <div class="item"><video src="video2.mp4" width="230" height="150" controls></video></div>
+</div>  
+<br>
+ 
+           <hr color="white">
+           
  </body>
  </body>
  </html>
